# movie_player

./: Cargo.toml  README.md
logs/: gst_inspect_gtk4paintablesink.txt  gst_inspect_playbin.txt  gst_inspect_qtdemux.txt
src/: main.rs
